[metadata]
name = riptide-ffa
url = https://github.com/v-morello/riptide
author = Vincent Morello
author_email = vmorello@gmail.com
description = Pulsar searching with the Fast Folding Algorithm (FFA)
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: C
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    astropy
    pandas
    schema
    pyyaml
    threadpoolctl
    pytest
    pytest-cov
    matplotlib
    numpy

[options.entry_points]
console_scripts =
    rffa = riptide.pipeline.pipeline:main
    rseek = riptide.apps.rseek:main

[options.extras_require]
develop =
    build
    twine